# AIRRA

./: .env.example  .gitignore  CODE_REVIEW_ACTION_ITEMS.md  ENGINEER_NOTIFICATION_SYSTEM.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_INCIDENT_GUIDE.md  README.md  SETUP.md  docker-compose.yml  features.md  project_structure.txt
backend/: .env.example  CONFIGURATION_GUIDE.md  Dockerfile  IMPROVEMENTS.md  PHASE3_ENHANCEMENTS.md  README.md  alembic.ini  celerybeat-schedule  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_full_workflow.py  test_hypothesis_direct.py  test_llm_integration.py  test_quick_incident.py  test_without_services.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: dependencies.py  rate_limit.py
backend/app/core/: redis.py
backend/app/models/: __init__.py  action.py  audit_log.py  engineer.py  engineer_review.py  hypothesis.py  incident.py  incident_event.py  incident_pattern.py  notification.py  on_call_schedule.py  postmortem.py
backend/app/schemas/: action.py  assignment.py  engineer.py  engineer_review.py  hypothesis.py  incident.py  notification.py  on_call_schedule.py  postmortem.py
backend/app/services/: ai_incident_generator.py  anomaly_monitor.py  audit_service.py  confidence_tracker.py  dependency_graph.py  dependency_map.py  embedding_service.py  event_logger.py  incident_assigner.py  incident_summarizer.py  llm_client.py  (+10 more)
backend/config/: service_dependencies.yaml
backend/tests/: __init__.py  conftest.py
(+147 files in other folders)
